# MicroManipulatorStepper

./: .gitignore  MotionControllerRP.code-workspace  README.md
construction/: Litho Base Mount.step
construction/v4_3dprinting_stl/machine/: BaseBlock.stl  EndEffector.stl  MotorHorn.stl  MotorMount.stl  RubberBandCollet.stl  StandingBase.stl
construction/v4_3dprinting_stl/tools/rod_length_setting_press/: CaliperClamp.stl  RodCollet.stl  RodGrindingJigA.stl  RodGrindingJigB.stl  RodGuide.stl
construction/v4_3dprinting_stl/tools/rod_sharpener/: BladeCarrier.stl  RodGuide.stl
documentation/bom/: bom.md
documentation/setup_guide/: setup_guide.md
electronics/: EncoderBoard.kicad_pcb  EncoderBoard.kicad_pro  EncoderBoard.kicad_sch
electronics/rot_platform_pcb/: rot_platform_pcb.kicad_pcb  rot_platform_pcb.kicad_sch
firmware/MotionControllerRP/: CMakeLists.txt  Makefile  platformio.ini
firmware/MotionControllerRP/cmake/: pico_sdk_import.cmake
firmware/MotionControllerRP/include/compat/: Arduino.h  LittleFS.h  NeoPixelConnect.h  Wire.h
firmware/MotionControllerRP/src/: hw_config.h  main.cpp  robot.cpp  robot.h
firmware/MotionControllerRP/src/compat/: arduino_compat.cpp  arduino_entry.cpp  pico_littlefs.cpp
firmware/MotionControllerRP/src/hardware/: MT6835_encoder.cpp  MT6835_encoder.h
firmware/MotionControllerRP/src/kinematic_models/: kinematic_model_delta3d.cpp
firmware/MotionControllerRP/src/peripheral_control/: peripheral.cpp
firmware/MotionControllerRP/src/robot_joint/: robot_joint.cpp
firmware/MotionControllerRP/src/servo_control/: actuator_calibration.cpp  homing_controller.cpp  homing_controller.h  servo_controller.cpp
firmware/MotionControllerRP/src/utilities/: degrees.h  utilities.h
firmware/MotionControllerRP/test/host/: CMakeLists.txt  test_gcode_command.cpp  test_math3d.cpp  test_pid.cpp  test_ringbuffer.cpp  test_waveforms.cpp
firmware/rotation-stage-controller/: .gitignore  CMakeLists.txt  Makefile
firmware/rotation-stage-controller/src/: rotation.cpp
firmware/rotation-stage-controller/test/host/: CMakeLists.txt  test_rotation_stage.cpp
firmware/rotation-stage-controller/test/host/compat/: Arduino.h
firmware/test_motor/: CMakeLists.txt  Makefile
firmware/test_motor/include/compat/: Arduino.h  SPI.h  Wire.h
firmware/test_motor/src/compat/: arduino_main.cpp
firmware/test_motor/test/host/: CMakeLists.txt  test_encoder.cpp
firmware/test_motor/test/host/compat/: Arduino.h  SPI.h
rot_platform_pcb/: rot_platform_pcb.kicad_pro
rotation-stage-controller/: platformio.ini
rotation-stage-controller/src/: config.h  i2c_parser.cpp  main.cpp  main_with_vaccum.cpp  rotation.cpp  rotation.h  temperature.cpp  temperature.h
software/ImageFeatureValidation/: csv_generator.py  data.xlsx  detector.py  feature_detector.py  hist_check.py  movement_automation.py  vibration_detector.py
software/ImageFeatureValidation/captures/: idx_to_coord.csv  movement_results.csv  path_order.csv  progress.csv
software/ImageFeatureValidation/test_data/: movement_test_no_grid.csv
software/PythonAPI/: calibration_plotter.py  free_running_test.txt  log.txt  output_0.csv  output_1.csv  output_2.csv  pyproject.toml  raw_values.csv  test.txt  text.txt
software/PythonAPI/examples/: usage_example.py
software/PythonAPI/open_micro_stage_api/: api.py
